--- a/MostBeautiful.tex
+++ b/MostBeautiful.tex
@@ -1,1 +1,54 @@
-Hi
+\documentclass[10pt]{beamer}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage{lmodern}
+\usepackage[english]{babel}
+\usepackage{amsmath}
+\usepackage{amsfonts}
+\usepackage{amssymb}
+\usepackage{graphicx}
+\usetheme{default}
+\begin{document}
+\author{Shreya Balaji}
+\title{Exploring The Most Beautiful Mathematical Formula}
+\subtitle{\huge\(e^{i \pi} = -1\)}
+%\logo{}
+\institute{Berkeley Carroll School}
+%\date{}
+%\subject{Hi}
+%\setbeamercovered{transparent}
+%\setbeamertemplate{navigation symbols}{}
+%\titlegraphic{\includegraphics[width=2cm]{epoweripi.jpg}}
+\begin{frame}[plain]
+	\maketitle
+\end{frame}
+
+\begin{frame}
+	\frametitle{Why is the Equation Beautiful}
+\end{frame}
+
+\begin{frame}
+	\frametitle{ History of Mathematicians Involved}
+
+	A number of mathematicians laid the building blocks for understanding this equation.  As you can see, it has taken painstaking work of many mathematicians for us to come to such an elegant equation. Below are are some of the mathematicians whose works contributed to this equation :
+	\vspace{7pt}
+
+	\begin{list}{$\int$}{}
+		\item Jacob Bernoulli - Swiss mathematician Invented $e$
+		\item  Gottfried Wilhelm Leibniz  - Along with Newton invented Calculus
+		\item Issac Newton - Along with Leibniz invented Calculus
+		\item Carl Friedrich Gauss - One of  greatest mathematician of all time - Imaginary numbers
+		\item Leonhard Euler - Worked on imaginary numbers
+		\item Augustin-Louis Cauchy - Worked on imaginary numbers
+		\item Greek, Chinese and Indian Mathematicians - Contributed to $\pi$
+		\item James Gregory, Brook Taylor and Colin Maclaurin - Contributed to understanding of expansion series
+
+	\end{list}
+\end{frame}
+
+\begin{frame}
+	content...
+\end{frame}
+
+
+\end{document}
