--- a/MostBeautiful.tex
+++ b/MostBeautiful.tex
@@ -8,6 +8,7 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 \usetheme{default}
+%\usetheme{UniKlu}
 \begin{document}
 \author{Shreya Balaji}
 \title{Exploring The Most Beautiful Mathematical Formula}
@@ -19,6 +20,8 @@
 %\setbeamercovered{transparent}
 %\setbeamertemplate{navigation symbols}{}
 %\titlegraphic{\includegraphics[width=2cm]{epoweripi.jpg}}
+
+
 \begin{frame}[plain]
 	\maketitle
 \end{frame}
@@ -47,36 +50,41 @@
 \end{frame}
 
 \begin{frame}
-\frametitle{Taylor and Maclaurin Series}
-James Gregory and Brook Taylor invtented the idea of infinite series expansion of functions.  Scottish mathematician Colin Maclaurin used the work extensively to study functions centered around zero.  The basic idea of Maclaurin series is that any function can be expanded into a infinite series centered around zero as given below :
-\vspace{20pt}
+	\frametitle{Taylor and Maclaurin Series}
+	James Gregory and Brook Taylor invtented the idea of infinite series expansion of functions.  Scottish mathematician Colin Maclaurin used the work extensively to study functions centered around zero.  The basic idea of Maclaurin series is that any function can be expanded into a infinite series centered around zero as given below :
+	\vspace{20pt}
 
-\large $$f(x) = f(0)+x.\dfrac{f'(0)}{1!}+ x^2.\dfrac{f''(0)}{2!} +x^3.\dfrac{f'''(0)}{3!} + \dots$$
+	\large $$f(x) = f(0)+x.\dfrac{f'(0)}{1!}+ x^2.\dfrac{f''(0)}{2!} +x^3.\dfrac{f'''(0)}{3!} + \dots$$
 
-\vspace{20pt}
+	\vspace{20pt}
 
-In the next three slides, we will see the application of the same for three basic functions: $$e(x) \dots \sin(x) \dots \cos(x)$$
+	In the next three slides, we will see the application of the same for three basic functions: $$e(x) \dots \sin(x) \dots \cos(x)$$
 \end{frame}
 
 \begin{frame}
 	\frametitle{Taylor Series for e(x)}
 	\begin{center}
-\begin{tabular}{|c|c|c|c|c|}
-	\hline 
-	$f(x)$&  $f'(x)$& $f''(x)$ & $f'''(x)$ & $f''''(x)$ \\ 
-	\hline 
-	$e^x$ &$e^x$  &$e^x$  &$e^x$  &$e^x$  \\ 
-	\hline 
-	1&  1&  1&  1&1  \\ 
-	\hline 
-\end{tabular} 
+		\begin{tabular}{|c|c|c|c|c|}
+			\hline
+			$f(x)$ & $f'(x)$ & $f''(x)$ & $f'''(x)$ & $f''''(x)$ \\
+			\hline
+			$e^x$  & $e^x$   & $e^x$    & $e^x$     & $e^x$      \\
+			\hline
+			1      & 1       & 1        & 1         & 1          \\
+			\hline
+		\end{tabular}
 	\end{center}
-\vspace{20pt}
-Applying the Maclaurin formula we see that the infinite series expansion for $e^x$ is :
+	\vspace{20pt}
+	Applying the Maclaurin formula we see that the infinite series expansion for $e^x$ is :
 
-\large $$f(x) = f(0)+x.\dfrac{f'(0)}{1!}+ x^2.\dfrac{f''(0)}{2!} +x^3.\dfrac{f'''(0)}{3!} + \dots$$
+	\large $$f(x) = f(0)+x.\dfrac{f'(0)}{1!}+ x^2.\dfrac{f''(0)}{2!} +x^3.\dfrac{f'''(0)}{3!} + \dots$$
 
-\large $$e^x = 1+x.\dfrac{1}{1!}+ x^2.\dfrac{1}{2!} +x^3.\dfrac{1}{3!} + \dots$$
+	\large $$e^x = 1+x.\dfrac{1}{1!}+ x^2.\dfrac{1}{2!} +x^3.\dfrac{1}{3!} + \dots$$
+
+	now if we substitute $x$ to $ ix$ we get,
+
+	\large $$e^{ix} = 1+i.x.\dfrac{1}{1!}- x^2.\dfrac{1}{2!} -i.x^3.\dfrac{1}{3!} + x^4.\dfrac{1}{4!} \dots$$
+
 
 \end{frame}
 
@@ -84,44 +92,44 @@ Applying the Maclaurin formula we see that the infinite series expansion for $e^
 	\frametitle{Taylor Series for $\sin(x)$}
 	\begin{center}
 		\begin{tabular}{|c|c|c|c|c|}
-			\hline 
-			$f(x)$&  $f'(x)$& $f''(x)$ & $f'''(x)$ & $f''''(x)$ \\ 
-			\hline 
-			$\sin(x)$ &$\cos(x)$  &$-\sin(x)$  &-\cos(x)$  &$\sin(x)$  \\ 
-			\hline 
-			0&  1&  0&  -1&0  \\ 
-			\hline 
-		\end{tabular} 
+			\hline
+			\(f(x)\)    & \(f'(x)\)   & \(f''(x)\)   & \(f'''(x)\)  & \(f''''(x)\) \\
+			\hline
+			\(\sin(x)\) & \(\cos(x)\) & \(-\sin(x)\) & \(-\cos(x)\) & \(\sin(x)\)  \\
+			\hline
+			0           & 1           & 0            & -1           & 0            \\
+			\hline
+		\end{tabular}
 	\end{center}
 	\vspace{20pt}
 	Applying the Maclaurin formula we see that the infinite series expansion for $e^x$ is :
-	
+
 	\large $$f(x) = f(0)+x.\dfrac{f'(0)}{1!}+ x^2.\dfrac{f''(0)}{2!} +x^3.\dfrac{f'''(0)}{3!} + \dots$$
-	
+
 	\large $$\sin(x) = 0+x.\dfrac{1}{1!} -x^3.\dfrac{1}{3!} + x^5.\dfrac{1}{5!} +\dots$$
-	
+
 \end{frame}
 
 \begin{frame}
 	\frametitle{Taylor Series for $\cos(x)$}
 	\begin{center}
 		\begin{tabular}{|c|c|c|c|c|}
-			\hline 
-			$f(x)$&  $f'(x)$& $f''(x)$ & $f'''(x)$ & $f''''(x)$ \\ 
-			\hline 
-			$\cos(x)$ &$-\sin(x)$  &-cos(x)$  &$\sin(x)$  &$\cos(x)$  \\ 
-			\hline 
-			1&  0&  -1&  0&1  \\ 
-			\hline 
-		\end{tabular} 
+			\hline
+			$f(x)$    & $f'(x)$    & $f''(x)$  & $f'''(x)$ & $f''''(x)$ \\
+			\hline
+			$\cos(x)$ & $-\sin(x)$ & $-cos(x)$ & $\sin(x)$ & $\cos(x)$  \\
+			\hline
+			1         & 0          & -1        & 0         & 1          \\
+			\hline
+		\end{tabular}
 	\end{center}
 	\vspace{20pt}
 	Applying the Maclaurin formula we see that the infinite series expansion for $e^x$ is :
-	
+
 	\large $$f(x) = f(0)+x.\dfrac{f'(0)}{1!}+ x^2.\dfrac{f''(0)}{2!} +x^3.\dfrac{f'''(0)}{3!} + \dots$$
-	
+
 	\large $$\cos(x) = 1- x^2.\dfrac{1}{2!} +x^4.\dfrac{1}{4!} + \dots$$
-	
+
 \end{frame}
 
 \end{document}
