--- a/MostBeautiful.tex
+++ b/MostBeautiful.tex
@@ -138,7 +138,7 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{A graphical representation}
+	\frametitle{A Graphical Representation}
 \end{frame}
 
 \end{document}
