--- a/MostBeautiful.tex
+++ b/MostBeautiful.tex
@@ -29,6 +29,15 @@
 
 \begin{frame}
 	\frametitle{Why is the Equation Beautiful}
+	
+	Euler's identity is beautiful because it combines five of the most important numbers in mathematics into one equation. These numbers are...
+	
+	\item 1 - the basis for all other numbers
+	\item 0 - the concept of nothingness
+	\item pi - the ratio of a circle's circumference to its diameter
+	\item e - the base of natural logarithms
+	\item i - the "imaginary" square root of -1
+	
 \end{frame}
 
 \begin{frame}
