--- a/MostBeautiful.tex
+++ b/MostBeautiful.tex
@@ -30,11 +30,11 @@
 \begin{frame}
 	\frametitle{Why is the Equation Beautiful}
 	
-	Euler's identity is beautiful because it combines five of the most important numbers in mathematics into one equation. These numbers are...
+	Euler's identity is beautiful because it combines five of the most important numbers in mathematics into one equation. These are \dots
 	
-	\item 1 - the basis for all other numbers
-	\item 0 - the concept of nothingness
-	\item pi - the ratio of a circle's circumference to its diameter
+	\item 1 - the first integer
+	\item 0 - the concept of nothingness (together with 1, it makes the basis of binary numbers)
+	\item $\pi$- the ratio of a circle's circumference to its diameter
 	\item e - the base of natural logarithms
 	\item i - the "imaginary" square root of -1
 	
@@ -117,6 +117,10 @@
 	\large $$f(x) = f(0)+x.\dfrac{f'(0)}{1!}+ x^2.\dfrac{f''(0)}{2!} +x^3.\dfrac{f'''(0)}{3!} + \dots$$
 
 	\large $$\sin(x) = 0+x.\dfrac{1}{1!} -x^3.\dfrac{1}{3!} + x^5.\dfrac{1}{5!} +\dots$$
+	
+	By extension: 
+	
+	\large $$i\sin(x) = 0+i.x.\dfrac{1}{1!} -i.x^3.\dfrac{1}{3!} + i.x^5.\dfrac{1}{5!} +\dots$$
 
 \end{frame}
 
@@ -144,10 +148,29 @@
 
 \begin{frame}
 	\frametitle{Bringing it all together} 
+	\begin{center}
+	$\cos(x) + i\sin(x) = 1+i.x.\dfrac{1}{1!}- x^2.\dfrac{1}{2!} -i.x^3.\dfrac{1}{3!} +x^4.\dfrac{1}{4!} + i.x^5.\dfrac{1}{5!} +\dots = e^{ix}$
+	\end{center}
+
+	From the equations on the previous slides, we can see that \dots
+	\begin{center}
+		$\cos(x) + i\sin(x) = e^i^x$ 
+	\end{center} 
+	If $x = \pi$ \dots
+	\begin{center}
+		$\cos(\pi) + i\sin(\pi) = e^i^\pi$ \\
+	\end{center}
+	Then \dots
+	\begin{center}
+		$e^i^\pi + 1 = 0$
+	\end{center}
 \end{frame}
 
 \begin{frame}
 	\frametitle{A Graphical Representation}
+	\begin{center}
+	Now I will show you all a graphical representation of the most beautiful mathematical formula on GeoGebra. 
+	\end{center}
 \end{frame}
 
 \end{document}
