--- a/MostBeautiful.tex
+++ b/MostBeautiful.tex
@@ -10,10 +10,16 @@
 \usepackage{graphicx}
 \usetheme{AnnArbor}
 %\usetheme{UniKlu}
+
+\newcommand{\iu}{{i\mkern1mu}}
+
 \begin{document}
-\author{Shreya Balaji}
+
+
+
+\author{\textcolor{blue}{Shreya Balaji}}
 \title{Exploring The Most Beautiful Mathematical Formula}
-\subtitle{\huge\(e^{i \pi} = -1\)}
+\subtitle{\huge\(e^{\iu \pi} = -1\)}
 %\logo{}
 \institute{Berkeley Carroll School}
 %\date{}
@@ -28,29 +34,31 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Why is the Equation Beautiful}
+	\frametitle{Why is the Equation Beautiful \hspace{25pt} \textcolor{pink}{\Huge\(e^{\iu \pi} = -1\)}}
 	
 	Euler's identity is beautiful because it combines five of the most important numbers in mathematics into one equation. These are \dots
-	
-	\item 1 - the first integer
-	\item 0 - the concept of nothingness (together with 1, it makes the basis of binary numbers)
-	\item $\pi$- the ratio of a circle's circumference to its diameter
-	\item e - the base of natural logarithms
-	\item i - the "imaginary" square root of -1
+	\begin{itemize}
+	\item 1 - the first positive integer
+	\item 0 - the concept of nothingness \{together with 1, it makes the basis of binary numbers\}
+	\item {\bf${\pi}$} - the ratio of a circle's circumference to its diameter. An irrational number.
+	\item \large{$e$} - the base of natural logarithms also known as Euler's number
+	\item \large{$\iu$} - the "imaginary" square root of -1, also known as imaginary number.
+	\end{itemize}
+Over the next 10-15 minutes, I will attempt to show you two different proofs for the equation.
 	
 \end{frame}
 
 \begin{frame}
-	\frametitle{ History of Mathematicians Involved}
+	\frametitle{ History of Mathematicians Involved \hspace{25pt} \textcolor{pink}{\Huge\(e^{\iu \pi} = -1\)}}
 
 	A number of mathematicians laid the building blocks for understanding this equation.  As you can see, it has taken painstaking work of many mathematicians for us to come to such an elegant equation. Below are are some of the mathematicians whose works contributed to this equation :
 	\vspace{7pt}
 
 	\begin{list}{$\int$}{}
-		\item Jacob Bernoulli - Swiss mathematician Invented $e$
+		\item Jacob Bernoulli - Swiss mathematician invented $e$
 		\item  Gottfried Wilhelm Leibniz  - Along with Newton invented Calculus
 		\item Issac Newton - Along with Leibniz invented Calculus
-		\item Carl Friedrich Gauss - One of  greatest mathematician of all time - Imaginary numbers
+		\item Carl Friedrich Gauss - One of  greatest mathematician of all time - Imaginary numbers $\iu$
 		\item Leonhard Euler - Worked on imaginary numbers
 		\item Augustin-Louis Cauchy - Worked on imaginary numbers
 		\item Greek, Chinese and Indian Mathematicians - Contributed to $\pi$
@@ -60,19 +68,20 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Taylor and Maclaurin Series}
+	\frametitle{Taylor and Maclaurin Series \hspace{25pt} \textcolor{pink}{\Huge\(e^{\iu \pi} = -1\)}}
 	James Gregory and Brook Taylor invtented the idea of infinite series expansion of functions.  Scottish mathematician Colin Maclaurin used the work extensively to study functions centered around zero.  The basic idea of Maclaurin series is that any function can be expanded into a infinite series centered around zero as given below :
-	\vspace{20pt}
-
 	\large $$f(x) = f(0)+x.\dfrac{f'(0)}{1!}+ x^2.\dfrac{f''(0)}{2!} +x^3.\dfrac{f'''(0)}{3!} + \dots$$
+	You can recenter it to any point $a$ on the x axis by shifting the equation to  :
+	\large $$f(x) = f(0)+(x-a).\dfrac{f'(0)}{1!}+ (x-a)^2.\dfrac{f''(0)}{2!} +(x-a)^3.\dfrac{f'''(0)}{3!} + \dots$$
+	
+	But for this presentation we will stick to centering around zero. 
+	\vspace{10pt}
 
-	\vspace{20pt}
-
-	In the next three slides, we will see the application of the same for three basic functions: $$e(x) \dots \sin(x) \dots \cos(x)$$
+	In the next three slides, we will see the application of the same for three basic functions: $e(x) \dots \sin(x) \dots \cos(x)$
 \end{frame}
 
 \begin{frame}
-	\frametitle{Taylor Series for e(x)}
+	\frametitle{Taylor Series for e(x) \hspace{25pt} \textcolor{pink}{\Huge\(e^{\iu \pi} = -1\)}}
 	\begin{center}
 		\begin{tabular}{|c|c|c|c|c|c|}
 			\hline
@@ -93,13 +102,13 @@
 
 	By extension:
 
-	\large $$e^{ix} = 1+i.x.\dfrac{1}{1!}- x^2.\dfrac{1}{2!} -i.x^3.\dfrac{1}{3!} + x^4.\dfrac{1}{4!} \dots$$
+	\large $$e^{{\iu}.x} = 1+\iu.x.\dfrac{1}{1!}- x^2.\dfrac{1}{2!} -\iu.x^3.\dfrac{1}{3!} + x^4.\dfrac{1}{4!} \dots$$
 
 
 \end{frame}
 
 \begin{frame}
-	\frametitle{Taylor Series for $\sin(x)$}
+	\frametitle{Taylor Series for $\sin(x)$ \hspace{25pt} \textcolor{pink}{\Huge\(e^{\iu \pi} = -1\)}}
 	\begin{center}
 		\begin{tabular}{|c|c|c|c|c|c|}
 			\hline
@@ -120,12 +129,12 @@
 	
 	By extension: 
 	
-	\large $$i\sin(x) = 0+i.x.\dfrac{1}{1!} -i.x^3.\dfrac{1}{3!} + i.x^5.\dfrac{1}{5!} +\dots$$
+	\large $$\iu.\sin(x) = 0+\iu.x.\dfrac{1}{1!} -\iu.x^3.\dfrac{1}{3!} + \iu.x^5.\dfrac{1}{5!} +\dots$$
 
 \end{frame}
 
 \begin{frame}
-	\frametitle{Taylor Series for $\cos(x)$}
+	\frametitle{Taylor Series for $\cos(x)$ \hspace{25pt} \textcolor{pink}{\Huge\(e^{\iu \pi} = -1\)}}
 	\begin{center}
 		\begin{tabular}{|c|c|c|c|c|c|}
 			\hline
@@ -147,29 +156,41 @@
 \end{frame}
 
 \begin{frame}
-	\frametitle{Bringing it all together} 
+
+	\frametitle{Bringing it all together \hspace{25pt} \textcolor{pink}{\Huge\(e^{\iu \pi} = -1\)}}
 	\begin{center}
-	$\cos(x) + i\sin(x) = 1+i.x.\dfrac{1}{1!}- x^2.\dfrac{1}{2!} -i.x^3.\dfrac{1}{3!} +x^4.\dfrac{1}{4!} + i.x^5.\dfrac{1}{5!} +\dots = e^{ix}$
+	$\cos(x) + \iu.\sin(x) = 1+\iu..x.\dfrac{1}{1!}- x^2.\dfrac{1}{2!} -\iu..x^3.\dfrac{1}{3!} +x^4.\dfrac{1}{4!} + \iu..x^5.\dfrac{1}{5!} +\dots = e^{\iu.x}$
 	\end{center}
 
 	From the equations on the previous slides, we can see that \dots
 	\begin{center}
-		$\cos(x) + i\sin(x) = e^i^x$ 
+		$\cos(x) + \iu.\sin(x) = e^{\iu.x}$ 
 	\end{center} 
 	If $x = \pi$ \dots
 	\begin{center}
-		$\cos(\pi) + i\sin(\pi) = e^i^\pi$ \\
+		$\cos(\pi) + \iu.\sin(\pi) = e^{\iu.\pi}$ \\
 	\end{center}
 	Then \dots
 	\begin{center}
-		$e^i^\pi + 1 = 0$
+		$e^{\iu.\pi} + 1 = 0$
 	\end{center}
+
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{A Graphical Proof \hspace{25pt} \textcolor{pink}{\Huge\(e^{\iu \pi} = -1\)}}
+	
+	%\begin{center}
+	Now I will show you all a graphical representation of this beautiful mathematical formula on Geogebra. The graphical proof of the equation is visually pleasing. We will now switch to Geogebra to go over the second way of prooving the equation.
+	%\end{center}
 \end{frame}
 
 \begin{frame}
-	\frametitle{A Graphical Representation}
 	\begin{center}
-	Now I will show you all a graphical representation of the most beautiful mathematical formula on GeoGebra. 
+		\Huge \textcolor{blue}{Thank You} \\
+		\vspace{25pt}
+		%\huge \textcolor{pink}{Don't be a : ${\dfrac{d^3y}{dx^3}}$}
 	\end{center}
 \end{frame}
 
