--- a/MostBeautiful.tex
+++ b/MostBeautiful.tex
@@ -38,13 +38,13 @@
 	\frametitle{Why is the Identity Beautiful \hspace{25pt} \textcolor{pink}{\Huge\(e^{\iu \pi} + 1 =0\)}}
 	
 	Euler's identity is beautiful because it combines five of the most important numbers in mathematics into one equation. These are \dots
-	\begin{itemize}
+	\begin{list}{$\Xi$}{}
 	\item 1 - the first positive integer
 	\item 0 - the concept of nothingness \{together with 1, it makes the basis of binary numbers\}
 	\item {\bf${\pi}$} - the ratio of a circle's circumference to its diameter. An irrational number.
 	\item $e$ - the base of natural logarithms also known as Euler's number
 	\item $\iu$ - the "imaginary" square root of -1, also known as imaginary number.
-	\end{itemize}
+	\end{list}
 \vspace{20pt}
 Over the next 10-15 minutes, I will attempt to show you two different proofs for the equation.
 	
@@ -72,10 +72,15 @@ Over the next 10-15 minutes, I will attempt to show you two different proofs for
 \begin{frame}
 	\frametitle{The concept of exponential function $e^x$ \hspace{25pt} \textcolor{pink}{\Huge\(e^{\iu \pi} +1 = 0\)}}
 	
-	Write about exponential function. how continuous compounding results in exponential funciton
+"The number $e$ (sometimes called the natural number) is Euler's number. It is an important mathematical constant that is equal to approximately 2.718. When it is used as the base of a logarithm, the corresponding logarithm is called the natural logarithm, written as $\ln(x)$. 
+
+Most of the definitions for $e$ involves calculus. One definition of e will be seen later in this presentation. In addition, there are several ways that the number $e$ can be used in mathematics. One of which is the ways in which the number was founded: compound interest. 
+
+Jacob Bernoulli, the founder of the number $e$ discovered this constant by asking many questions about the amount of money in a bank account after a certain number of years. He finally came up with the formula: 
+
+$$e^x = \lim_{n\to\infty}(1+(\frac{x}{n}))^n$$
 	
 \end{frame}
-
 \begin{frame}
 	\frametitle{Taylor and Maclaurin Series \hspace{25pt} \textcolor{pink}{\Huge\(e^{\iu \pi} +1 = 0\)}}
 	James Gregory and Brook Taylor invtented the idea of infinite series expansion of functions.  Scottish mathematician Colin Maclaurin used the work extensively to study functions centered around zero.  The basic idea of Maclaurin series is that any function can be expanded into a infinite series centered around zero as given below :
