--- a/MostBeautiful.tex
+++ b/MostBeautiful.tex
@@ -72,13 +72,13 @@ Over the next 10-15 minutes, I will attempt to show you two different proofs for
 \begin{frame}
 	\frametitle{The concept of exponential function $e^x$ \hspace{25pt} \textcolor{pink}{\Huge\(e^{\iu \pi} +1 = 0\)}}
 	
-"The number $e$ (sometimes called the natural number) is Euler's number. It is an important mathematical constant that is equal to approximately 2.718. When it is used as the base of a logarithm, the corresponding logarithm is called the natural logarithm, written as $\ln(x)$. 
+The number $e$ (sometimes called the natural number) is Euler's number. It is an important mathematical constant that is equal to approximately 2.718. When it is used as the base of a logarithm, the corresponding logarithm is called the natural logarithm, written as $\ln(x)$. \vspace{10pt}
 
-Most of the definitions for $e$ involves calculus. One definition of e will be seen later in this presentation. In addition, there are several ways that the number $e$ can be used in mathematics. One of which is the ways in which the number was founded: compound interest. 
+Most of the definitions for $e$ involves calculus. One definition of $e$ will be seen later in this presentation. There are several important uses of $e$, one of which is the calculation of continuous compounding of interest in the field of finance. \vspace{10pt}
 
-Jacob Bernoulli, the founder of the number $e$ discovered this constant by asking many questions about the amount of money in a bank account after a certain number of years. He finally came up with the formula: 
+Jacob Bernoulli, the founder of the concept $e$ discovered this constant by asking many questions about the amount of money in a bank account after continous compounding of interest. He finally came up with the formula: \\
 
-$$e^x = \lim_{n\to\infty}(1+(\frac{x}{n}))^n$$
+$$e^x = \lim_{n\to\infty}\Big(1+\dfrac{x}{n}\Big)^n$$
 	
 \end{frame}
 \begin{frame}
@@ -164,7 +164,7 @@ $$e^x = \lim_{n\to\infty}(1+(\frac{x}{n}))^n$$
 \begin{frame}
 	\frametitle{Bringing it all together \hspace{25pt} \textcolor{pink}{\Huge\(e^{\iu \pi} +1 = 0\)}}
 	\begin{center}
-	$\cos(x) + \iu.\sin(x) = 1+\iu..x.\dfrac{1}{1!}- x^2.\dfrac{1}{2!} -\iu..x^3.\dfrac{1}{3!} +x^4.\dfrac{1}{4!} + \iu..x^5.\dfrac{1}{5!} +\dots = e^{\iu.x}$
+	$\cos(x) + \iu.\sin(x) = 1+\iu.x.\dfrac{1}{1!}- x^2.\dfrac{1}{2!} -\iu.x^3.\dfrac{1}{3!} +x^4.\dfrac{1}{4!} + \iu.x^5.\dfrac{1}{5!} +\dots = e^{\iu.x}$
 	\end{center}
 
 	From the equations on the previous slides, we can see that \dots
@@ -188,8 +188,8 @@ $$e^x = \lim_{n\to\infty}(1+(\frac{x}{n}))^n$$
 	\frametitle{Quick review of Complex Numbers \hspace{25pt} \textcolor{pink}{\Huge\(e^{\iu \pi} +1 = 0\)}}
 	A complex number as a real part and an imaginary part.  Lets assume two complex numbers :
 	\begin{list}{$\odot$}{}
-		\item Let $z = a+\iu b$
-		\item Let $w = c+\iu d$
+		\item  $z = a+\iu b$
+		\item  $w = c+\iu d$
 	\end{list}
 Then the following rules apply to complex numbers
 	\begin{list}{$\odot$}{}
@@ -220,7 +220,7 @@ Then the following rules apply to complex numbers
 	\begin{center}
 		\Huge \textcolor{blue}{Thank You} \\
 		\vspace{25pt}
-		%\huge \textcolor{pink}{Don't be a : ${\dfrac{d^3y}{dx^3}}$}
+		\huge \textcolor{pink}{Don't be a : ${\dfrac{d^3x}{dt^3}}$}
 	\end{center}
 \end{frame}
 
