--- a/MostBeautiful.tex
+++ b/MostBeautiful.tex
@@ -18,20 +18,21 @@
 
 
 
-\author{\textcolor{blue}{Shreya Balaji}}
+\author{\Large\textcolor{blue}{Shreya Balaji}}
 \title{Exploring a Beautiful Mathematical Identity}
 \subtitle{\huge\(e^{\iu \pi} +1 = 0\)}
-%\logo{}
-\institute{Berkeley Carroll School}
-\date{}
+%\logo{"index.png"}
+\institute{\large Berkeley Carroll School}
+\date{May 6, 2020}
 %\subject{Hi}
 %\setbeamercovered{transparent}
 %\setbeamertemplate{navigation symbols}{}
-%\titlegraphic{\includegraphics[width=2cm]{epoweripi.jpg}}
+\titlegraphic{\includegraphics[width=2cm]{index.jpeg}}
 
 
 \begin{frame}[plain]
 	\maketitle
+	%\date{05/06/2020}
 \end{frame}
 
 \begin{frame}
