--- a/MostBeautiful.tex
+++ b/MostBeautiful.tex
@@ -54,7 +54,7 @@ Over the next 10-15 minutes, I will attempt to show you two different proofs for
 \begin{frame}
 	\frametitle{ History of Mathematicians Involved \hspace{25pt} \textcolor{pink}{\Huge\(e^{\iu \pi} +1 = 0\)}}
 
-	A number of mathematicians laid the building blocks for understanding this equation.  As you can see, it has taken painstaking work of many mathematicians for us to come to such an elegant equation. Below are are some of the mathematicians whose works contributed to this equation :
+	A number o\label{key}f mathematicians laid the building blocks for understanding this equation.  As you can see, it has taken painstaking work of many mathematicians for us to come to such an elegant equation. Below are are some of the mathematicians whose works contributed to this equation :
 	\vspace{10pt}
 
 	\begin{list}{$\int$}{}
