--- a/MostBeautifulFinal.tex
+++ b/MostBeautifulFinal.tex
@@ -84,7 +84,7 @@ $$e^x = \lim_{n\to\infty}\Big(1+\dfrac{x}{n}\Big)^n$$
 \end{frame}
 \begin{frame}
 	\frametitle{Taylor and Maclaurin Series \hspace{25pt} \textcolor{pink}{\Huge\(e^{\iu \pi} +1 = 0\)}}
-	James Gregory and Brook Taylor invented the idea of infinite series expansion of functions.  Scottish mathematician Colin Maclaurin used the work extensively to study functions centered around zero.  The basic idea of Maclaurin series is that any function can be expanded into a infinite series centered around zero as given below :
+	James Gregory and Brook Taylor invtented the idea of infinite series expansion of functions.  Scottish mathematician Colin Maclaurin used the work extensively to study functions centered around zero.  The basic idea of Maclaurin series is that any function can be expanded into a infinite series centered around zero as given below :
 	{\large {$$f(x) = f(0)+x.\dfrac{f'(0)}{1!}+ x^2.\dfrac{f''(0)}{2!} +x^3.\dfrac{f'''(0)}{3!} + \dots$$}}
 	You can re-center it to any point $a$ on the x axis by shifting the equation to  :
 	{\large {$$f(x) = f(a)+(x-a).\dfrac{f'(a)}{1!}+ (x-a)^2.\dfrac{f''(a)}{2!} +(x-a)^3.\dfrac{f'''(a)}{3!} + \dots$$}}
@@ -132,7 +132,7 @@ $$e^x = \lim_{n\to\infty}\Big(1+\dfrac{x}{n}\Big)^n$$
 		\end{tabular}
 	\end{center}
 	\vspace{20pt}
-	Applying the Maclaurin formula we see that the infinite series expansion for $\sin(x)$ is :
+	Applying the Maclaurin formula we see that the infinite series expansion for $e^x$ is :
 	{\large $$f(x) = f(0)+x.\dfrac{f'(0)}{1!}+ x^2.\dfrac{f''(0)}{2!} +x^3.\dfrac{f'''(0)}{3!} + \dots$$
 	\large $$\sin(x) = 0+x.\dfrac{1}{1!} -x^3.\dfrac{1}{3!} + x^5.\dfrac{1}{5!} +\dots$$}	
 	By extension: 
@@ -154,7 +154,7 @@ $$e^x = \lim_{n\to\infty}\Big(1+\dfrac{x}{n}\Big)^n$$
 		\end{tabular}
 	\end{center}
 	\vspace{20pt}
-	Applying the Maclaurin formula we see that the infinite series expansion for $\cos(x)$ is :
+	Applying the Maclaurin formula we see that the infinite series expansion for $e^x$ is :
 
 	\large $$f(x) = f(0)+x.\dfrac{f'(0)}{1!}+ x^2.\dfrac{f''(0)}{2!} +x^3.\dfrac{f'''(0)}{3!} + \dots$$
 
@@ -212,7 +212,7 @@ Then the following rules apply to complex numbers
 \begin{frame}
 	\frametitle{A Graphical Proof \hspace{25pt} \textcolor{pink}{\Huge\(e^{\iu \pi} +1  = 0\)}}
 	%\begin{center}
-	Now I will show you all a graphical representation of this beautiful mathematical formula on Geogebra. The graphical proof of the equation is visually pleasing. We will now switch to Geogebra to go over the second way of proving the equation.
+	Now I will show you all a graphical representation of this beautiful mathematical formula on Geogebra. The graphical proof of the equation is visually pleasing. We will now switch to Geogebra to go over the second way of prooving the equation.
 	%\end{center}
 \end{frame}
 
