--- a/MostBeautiful.tex
+++ b/MostBeautiful.tex
@@ -18,11 +18,11 @@
 
 
 
-\author{\Large\textcolor{blue}{Shreya Balaji}}
+\author{\textcolor{orange}{Shreya Balaji}}
 \title{Exploring a Beautiful Mathematical Identity}
 \subtitle{\huge\(e^{\iu \pi} +1 = 0\)}
 %\logo{"index.png"}
-\institute{\large Berkeley Carroll School}
+\institute{ Berkeley Carroll School}
 \date{May 6, 2020}
 %\subject{Hi}
 %\setbeamercovered{transparent}
